# Universitly

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  entrypoint.sh  manage.py  pyproject.toml
core/api/: urls.py
core/api/v1/: urls.py
core/apps/common/: exceptions.py  validators.py
core/apps/common/models/: fields.py  models.py
core/apps/courses/: apps.py  models.py
core/apps/courses/migrations/: 0001_initial.py  0002_initial.py
core/apps/education/: admin.py  apis.py  apps.py  models.py  tasks.py  urls.py
core/apps/education/migrations/: 0001_initial.py  0002_initial.py  0003_remove_sectionhomework_deadline_gt_now_and_more.py
core/apps/education/selectors/: __init__.py  course.py  institution.py  institution_selectors.py
core/apps/education/services/: __init__.py  course.py  institution.py  institution_services.py
core/apps/students/: admin.py  apps.py  urls.py
core/apps/students/migrations/: 0001_initial.py  0002_initial.py
core/apps/students/models/: managers.py  models.py
core/apps/tasks/: celery.py  models.py  tasks.py
core/apps/tasks/migrations/: 0001_initial.py  0002_auto_20250228_1227.py
core/apps/tasks/selectors/: email.py
core/apps/teachers/: admin.py  apps.py
core/apps/users/: admin.py  managers.py  models.py  selectors.py  services.py  urls.py
core/config/: asgi.py  env.py  urls.py  wsgi.py
core/config/django/: base.py  production.py  test.py
core/config/settings/: __init__.py  celery.py  cors.py  custom.py  django.py  emails.py  jwt.py
docker_compose/: app.yaml  infra.yaml  storages.yaml
(+12 files in other folders)
